--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "mint-ui": "^2.2.13",
     "node-sass": "^4.14.1",
     "qs": "^6.10.1",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "7.3.1",
     "vant": "^2.12.22",
     "vue": "^2.6.14",
     "vue-awesome-swiper": "^3.1.3",
