--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "core-js": "^3.14.0",
     "ly-tab": "^2.1.2",
     "mint-ui": "^2.2.13",
-    "node-sass": "^4.14.1",
+    "node-sass": "7.0.1",
     "qs": "^6.10.1",
-    "sass-loader": "7.3.1",
+    "sass-loader": "4",
     "vant": "^2.12.22",
     "vue": "^2.6.14",
     "vue-awesome-swiper": "^3.1.3",
